About us page done! Closes #28

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
                   <li><a href="#governance"><i class="icon-file"></i> Non-Profit Governance</a></li>
                   <li><a href="#contact"><i class="icon-envelope"></i> Contact Us</a></li>
                   <li class="divider"></li>
-                  <li><a href="#"><i class="icon-flag"></i> Help</a></li>
+                  <li><a href="help.html"><i class="icon-flag"></i> Help</a></li>
 
                 </ul>
               </div>
@@ -106,7 +106,7 @@
                                   </span>
                               </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/rayjean.jpg') }}" width="150"/></span>
-                              <span>Ray did his undergrad at Harvard where he majored in @@@@@@. He's now a fourth year medical student, taking a year off to
+                              <span>Ray did his undergrad at Harvard where he was an engineering major. He's now a fourth year medical student, taking a year off to
                                   expand the world's medical knowledge while doing research with Dr. Jay Picarillo.
                                   <br/><br/><br/><p>E-Mail: <a href="mailto:rayjean@clindesk.org">rayjean@clindesk.org</a></p>
                               </span>
@@ -156,9 +156,9 @@
                                If you need our EIN (or other data, such as our DUNS number), please e-mail us at <a href="mailto:legal@clindesk.org">legal@clindesk.org</a>.</div>
                                <div class="tab-pane" id="docs-internal">We make an effort to publicize our bylaws, conflict of interest policy, and other documents regarding our corporate governance.
                                <br/><br/><ul>
-                                   <li>Corporate Bylaws</li>
-                                   <li>Conflict of Interest Policy</li>
-                                   <li></li>
+                                   <li>Corporate Bylaws (Coming soon)</li>
+                                   <li>Conflict of Interest Policy (Coming soon)</li>
+				   <li>Copyright and Intellectual Property (Coming soon)</li>
                                </ul></div>
                              </div>
                             </div>
