--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,7 @@
         <div class="span9">
             <div class="innerSpacer">
                 <div class="portfolioItem">
-                    <a href="project_single.html" class="peOver">
-                        <img src="{{ static('img/content/imgpost4.jpg') }}" alt="project" />
-                    </a>
+		      <iframe width="640" height="360" src="http://www.youtube-nocookie.com/embed/5vfdIE-eMig?rel=0" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
@@ -36,7 +34,7 @@
                   </ul>
                 <br />
 
-                <a href="#" class="btn btn-info"><i class="icon-share icon-white"></i>See the Topics</a>
+                <a href="#disease-topics" class="btn btn-info"><i class="icon-share icon-white"></i>See the Topics</a>
 
             </div>
 
@@ -73,8 +71,8 @@
 
 					<!-- carousel -->
 					<div class="row-fluid relative">
-						<div class="span12">
-							<h1>Latest Projects</h1>
+						<div class="span12" id="disease-topics">
+							<h1>Diseases</h1>
 						</div>
 
 						<div class="carousel-nav">
