Add some about disclaimer text. All these e-mail addrs. exist now.

--- a/templates/about.html
+++ b/templates/about.html
@@ -169,8 +169,8 @@
 
                       <h1 id="contact">Contact Us</h1>
                      <div class="row-fluid">
-                         We love to hear from our visitors! If you have a question, please check the <a href="help.html">Help &amp; FAQ</a> page to see if your question has already been answered.
-                         <br/><br/>
+                       <p>We love to hear from our visitors! If you have a question, please check the <a href="help.html">Help &amp; FAQ</a> page to see if your question has already been answered.</p>
+		       <p>Unfortunately, we can't answer personal medical questions. ClinDesk &amp; White Coat Academy should be used for reference only.</p>
                          <div class="span8"><table class="table table-striped">
                                                  <tbody>
                                                    <tr>
