FAQ filler text. Please fix this up someone. @aaronm maybe?

--- a/templates/help.html
+++ b/templates/help.html
@@ -19,17 +19,7 @@
                         </form>
                       </div>
                     </div>
-
-                    <!--TOC-->
-                    <div class="row-fluid">
-                      <div class="span12">
-                        <p>The underlying principle behind everything we do at ClinDesk is approachability &mdash; if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:info@clindesk.org">info@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p>
-
-                      </div>
-                    </div>
-
 {# TODO: Can we modularize this more? Like a for loop / import thing from Jinja? #}
-
                     <!--faq items-->
                     <div class="row-fluid">
                       <div class="span12">
@@ -63,7 +53,9 @@
                           </div>
                           <div class="faq-body in" id="faq2">
                             <div class="faq-inner">
-                                <p>omg omg</p>
+                                <p>We hope so! We go to great lengths to ensure our content is accurate, but we might make some mistakes (keep in mind we're medical students!).
+                                To make sure we're as error-free as possible, we review all our videos, and our clinical advisory board checks our content.</p>
+                                <p>If you've found an error or mistake, please let us know at <a href="mailto:info@clindesk.org">info@clindesk.org</a>.</p>
                             </div>
                           </div>
                         </div>
@@ -75,12 +67,19 @@
 
                             <div data-target="#faq3" data-toggle="collapse">
                               <i class="icon-question-sign"></i>
-                              Can I trust what I find on ClinDesk and White Coat Academy?
+                                Can I save or download your videos and other content? What's your copyright policy?
                             </div>
                           </div>
                           <div class="faq-body in" id="faq3">
                             <div class="faq-inner">
-                                <p>omg omg</p>
+                                <p>Yes, we encourage it -- with one caveat. We license all our content under a <a href="http://creativecommons.org/" target="_blank">Creative Commons</a> license.
+                                We've chosen the Creative Commons 3.0 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">BY-NC-SA License</a>.</p>
+                                <p>This means three things:</p>
+                                <ul>
+                                    <li>BY &mdash; By Attribution: You must clearly attribute any content to ClinDesk &amp; White Coat Academy.</li>
+                                    <li>NC &mdash; Non-Commercial: You cannot use our content for commercial purposes.</li>
+                                    <li>SA &mdash; Share Alike: If you build upon our content, you need to share it with others using a similar license.</li>
+                                </ul>
                             </div>
                           </div>
                         </div>
@@ -93,12 +92,12 @@
 
                             <div data-target="#faq4" data-toggle="collapse">
                               <i class="icon-question-sign"></i>
-                              Can I trust what I find on ClinDesk and White Coat Academy?
+                               How can I give feedback? I think I found a mistake on the site.
                             </div>
                           </div>
                           <div class="faq-body collapse" id="faq4">
                             <div class="faq-inner">
-                                <p>omg omg</p>
+                                <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:info@clindesk.org">info@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
                             </div>
                           </div>
                         </div>
@@ -111,12 +110,13 @@
 
                             <div data-target="#faq5" data-toggle="collapse">
                               <i class="icon-question-sign"></i>
-                              Can I trust what I find on ClinDesk and White Coat Academy?
+                                How is ClinDesk financed? Do you make money?
                             </div>
                           </div>
                           <div class="faq-body collapse" id="faq5">
                             <div class="faq-inner">
-                                <p>omg omg</p>
+                                <p>We're a non-profit organization, which means we depend on donations and grants to keep us going (bandwidth is expensive!).</p>
+                                <p>If you've found our materials helpful, please <a href="donate.html">donate</a> so we can continue to improve our resources. </p>
                             </div>
                           </div>
                         </div>
@@ -129,70 +129,18 @@
 
                             <div data-target="#faq6" data-toggle="collapse">
                               <i class="icon-question-sign"></i>
-                              Can I trust what I find on ClinDesk and White Coat Academy?
+                               I have a medical question &mdash; Can I ask you?
                             </div>
                           </div>
                           <div class="faq-body collapse" id="faq6">
                             <div class="faq-inner">
-                                <p>omg omg</p>
+                                <p>Unfortunately, no. You should contact a real doctor, and if you have a medical emergency, you should of course call 911 (or your country's emergency number).</p>
+                                </p>
                             </div>
                           </div>
                         </div>
                         <!--END FAQ ITEM-->
 
-
-                        <!--FAQ-->
-                        <div class="faq">
-                          <div class="faq-heading">
-
-                            <div data-target="#faq7" data-toggle="collapse">
-                              <i class="icon-question-sign"></i>
-                              Can I trust what I find on ClinDesk and White Coat Academy?
-                            </div>
-                          </div>
-                          <div class="faq-body collapse" id="faq7">
-                            <div class="faq-inner">
-                                <p>omg omg</p>
-                            </div>
-                          </div>
-                        </div>
-                        <!--END FAQ ITEM-->
-
-
-                        <!--FAQ-->
-                        <div class="faq">
-                          <div class="faq-heading">
-
-                            <div data-target="#faq8" data-toggle="collapse">
-                              <i class="icon-question-sign"></i>
-                              Can I trust what I find on ClinDesk and White Coat Academy?
-                            </div>
-                          </div>
-                          <div class="faq-body collapse" id="faq8">
-                            <div class="faq-inner">
-                                <p>omg omg</p>
-                            </div>
-                          </div>
-                        </div>
-                        <!--END FAQ ITEM-->
-
-
-                        <!--FAQ-->
-                        <div class="faq">
-                          <div class="faq-heading">
-
-                            <div data-target="#faq9" data-toggle="collapse">
-                              <i class="icon-question-sign"></i>
-                              Can I trust what I find on ClinDesk and White Coat Academy?
-                            </div>
-                          </div>
-                          <div class="faq-body collapse" id="faq9">
-                            <div class="faq-inner">
-                                <p>omg omg</p>
-                            </div>
-                          </div>
-                        </div>
-                        <!--END FAQ ITEM-->
 
 
                       </div>
