Updated headers to: - Diseases -+ Dropdown Content
- Special Topics

Not sure how I feel about these (esp. the dropdown). Thoughts @dgermain @aaronm @rayjean ?

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,42 +50,21 @@
 	<li><a href="index.html">Home</a></li>
 	<li class="dropdown">
 		<a href="diseases.html">Diseases<b class="caret"></b></a>
-		<ul class="dropdown-menu">  
-			<li><a href="full_width.html">Full Width</a></li>
-			<li><a href="sidebar_right.html">Right Sidebar</a></li>
-			<li><a href="sidebar_left.html">Left Sidebar</a></li>
-			<li><a href="faq.html"><i class="icon-question-sign icon-white"></i> &nbsp; FAQs</a></li>
-			<li><a href="404.html">404 Page</a></li>
-			<li><a href="search_results.html">Search Results <span class="badge badge-warning">10</span></a></li>
+		<ul class="dropdown-menu">
+			<li><a href="full_width.html"><i class="icon-th icon-white"></i> &nbsp;<b>View All Topics</b></a></li>
 			<li class="divider"></li>
-			<li>
-				<a href="#">3rd-level Submenu <span class="icon-chevron-right icon-white"></span></a>
-				<ul class="dropdown-menu sub-menu">
-					<li><a href="#">Action</a></li>
-					<li><a href="#">Another action</a></li>
-					<li><a href="#">Something else here</a></li>
-					<li class="divider"></li>
-					<li class="nav-header">Nav header</li>
-					<li><a href="#">Separated link</a></li>
-					<li><a href="#">One more separated link</a></li>
-				</ul>
-			</li>
+			<li><a href="full_width.html">Heart &amp; Vascular <span class="badge badge-warning">New!</span></a></li>
+			<li><a href="full_width.html">Heart &amp; Vascular <span class="badge badge-warning">New!</span></a></li>
+			<li><a href="sidebar_right.html">Kidneys <span class="badge badge-info">Updated</span></a></li>
+			<li><a href="sidebar_left.html">Lungs</a></li>
+			<li><a href="sidebar_left.html">Blood, Bone Marrow, Lymphatics</a></li>
+			<li><a href="sidebar_left.html">Digestive and Gastrointestinal</a></li>
+			<li class="divider"></li>
+			<li><a href="search.html"><i class="icon-question-sign icon-white"></i> &nbsp;Search</a></li>
 		</ul>
 	</li>
 	<li class="dropdown">
-		<a href="pharm.html">Drugs &amp; Pharm<b class="caret"></b></a>
-		<ul class="dropdown-menu">
-			<li><a href="portfolio_1.html"><i class="icon-th-list icon-white"></i> &nbsp; 1 Column <span class="badge badge-important">1</span></a></li>
-			<li><a href="portfolio_2.html">2 Columns</a></li>
-			<li><a href="portfolio_3.html">3 Columns</a></li>
-			<li><a href="portfolio_4.html">4 Columns</a></li>
-			<li><a href="portfolio_6.html"><i class="icon-th icon-white"></i> &nbsp; Thumbs Grid</a></li>
-			<li class="divider"></li>
-			<li class="nav-header">Projects</li>
-			<li><a href="project_single.html">Project Page <span class="label label-info">Images</span></a></li>
-			<li><a href="project_single_slider.html">Project Page <span class="label label-warning">Slider</span></a></li>
-			<li><a href="project_single_video.html">Project Page <span class="label label-important">Video</span></a></li>
-		</ul>
+		<a href="pharm.html">Special Topics</a>
 	</li>
 	<li class="dropdown"><a href="support.html">Support Us</a>
 	</li>
