Add a special topics page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,9 +47,9 @@
 
 					<!--main nav-->
 <ul class="nav">
-	<li><a href="index.html">Home</a></li>
+	<li><a href="/index.html">Home</a></li>
 	<li class="dropdown">
-		<a href="diseases.html">Diseases<b class="caret"></b></a>
+		<a href="/diseases/">Diseases<b class="caret"></b></a>
 		<ul class="dropdown-menu">
 			<li><a href="full_width.html"><i class="icon-th icon-white"></i> &nbsp;<b>View All Topics</b></a></li>
 			<li class="divider"></li>
@@ -64,14 +64,14 @@
 		</ul>
 	</li>
 	<li class="dropdown">
-		<a href="pharm.html">Special Topics</a>
+		<a href="/special-topics/">Special Topics</a>
 	</li>
-	<li class="dropdown"><a href="support.html">Support Us</a>
+	<li class="dropdown"><a href="/support.html">Support Us</a>
 	</li>
     <li>
-   		<a href="help.html">Help &amp; FAQ</a>
+   		<a href="/help.html">Help &amp; FAQ</a>
    	</li>
-	<li class="last"><a href="about.html">About</a></li>
+	<li class="last"><a href="/about.html">About</a></li>
 </ul>
 <!--end main nav-->
 					
